assets/css/styles.css
/* -------------- *
 * General
 * -------------- */
* {
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  overscroll-behavior: none;
  /*background: #2c2c2c !important;*/
}

.anchors {
  display: block;
  position: relative;
  visibility: hidden;
}

.white {
  background: #ffffff;
  height: fit-content;
  padding: 50px 0px;
}

.grey {
  background: #ededed;
  height: fit-content;
  padding: 50px 0px;
}

.section-title {
  margin: 0 0 10px;
  text-align: center;
  font-size: 19px;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-weight: 700;
}

.section-title-border {
  width: 70px;
  height: 3px;
  background: rgba(0, 0, 0, 0.3);
  margin: 0 auto 20px;
}

.btn {
  text-decoration: none;
  color: #fff;
  padding: 10px 20px;
  border: none;
  outline: none;
  border-radius: 4px;
  background-color: #869198;
  font-size: 1rem;
  margin: 10px 10px;
  position: relative;
}

.btn a {
  text-decoration: none;
  color: #fff;
}

.btn:hover {
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: #678;
  transform: scale(1.1);
}

.btn:hover a {
  text-decoration: none;
  color: #fff;
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: #678;
  transform: scale(1.1);
}

/* -------------- *
 * Preloader
 * -------------- */
#overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(32, 33, 36, 0.8);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1999;
}

/* -------------- *
 * Nav Bar
 * -------------- */
.navbar {
  padding: 0 !important;
}

.transparent-navbar {
  background-color: transparent;
  transition: background-color 0.3s ease-in-out;
}

.solid-navbar {
  background-color: #131313;
}

.navbar-brand {
  padding-top: 0.5rem !important;
  padding-bottom: 0.5rem !important;
}

.navbar-expand-lg .navbar-nav .nav-link {
  padding-right: 1rem !important;
  padding-left: 1rem !important;
}

.nav-link {
  padding: 10px 15px;
  font-size: 1.25rem;
  background-color: transparent;
  color: white !important;
  text-decoration: none;
  cursor: pointer;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.nav-link:hover {
  background-color: white;
  color: black !important;
}

.navbar-dark .navbar-toggler {
  border-color: rgba(255, 255, 255, 1) !important;
}

.navbar button.navbar-toggler:hover {
  border-color: #ffffff;
  background: #fff;
  transition: all 0.3s ease;
}

.navbar-dark .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
}

.navbar-toggler:hover .navbar-toggler-icon {
  filter: invert(100%);
}

@media (max-width: 991.98px) {
  .nav-link:not(.navbar-brand) {
    width: 130px;
    text-align: center;
  }
}

/* -------------- *
 * Landing
 * -------------- */
.main {
  height: 100vh;
  text-transform: uppercase;
  color: white;
  position: relative;
}

.background-image {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  filter: brightness(40%);
}

.main h1 {
  font-size: 4rem;
}

.main h2 {
  font-size: 1.5rem;
}

.delay-05s {
  animation-delay: 0.5s;
  -webkit-animation-delay: 0.5s;
}

.delay-1s {
  animation-delay: 1s;
  -webkit-animation-delay: 1s;
}

.delay-2s {
  animation-delay: 2s;
  -webkit-animation-delay: 2s;
}

/* Social */
.icon-button {
  background-color: white;
  border-radius: 4.5rem;
  cursor: pointer;
  display: inline-block;
  font-size: 2.5rem;
  height: 4.5rem;
  line-height: 4.5rem;
  margin: 5px 5px;
  position: relative;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 4.5rem;
}

/* Circle */
.icon-button span {
  border-radius: 0;
  display: block;
  height: 0;
  left: 50%;
  margin: 0;
  position: absolute;
  top: 50%;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  width: 0;
}

.icon-button:hover span {
  width: 4.5rem;
  height: 4.5rem;
  border-radius: 4.5rem;
  margin: -2.25rem;
}

.icon-button i {
  background: none;
  color: white;
  height: 4.5rem;
  left: 0;
  line-height: 4.5rem;
  position: absolute;
  top: 0;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  width: 4.5rem;
  z-index: 10;
}

.linkedin span {
  background-color: #0073a4;
}
.github span {
  background-color: black;
}

.icon-button .icon-linkedin {
  color: #0073a4;
}
.icon-button .icon-github {
  color: black;
}

.icon-button:hover .icon-linkedin,
.icon-button:hover .icon-github {
  color: white;
}

/* Arrow */
.arrow {
  width: 100%;
  text-align: center;
  position: absolute;
  bottom: 40px;
}

.fa-angles-down {
  background-color: #fff;
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  cursor: pointer;
  font-size: 25px;
}

.fa-angles-down:hover {
  background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
  transition: all 0.3s ease;
}

.bounces {
  animation: bounces 2s infinite;
  animation-delay: 4s;
}

@keyframes bounces {
  0%,
  10%,
  40%,
  70%,
  100% {
    transform: translateY(0);
  }
  30% {
    transform: translateY(-10px);
  }
  50% {
    transform: translateY(-5px);
  }
}

/* -------------- *
 * About
 * -------------- */
.intro {
  font-size: 21px;
  padding-top: 20px;
}

.abt-img {
  max-height: 500px;
  max-width: 100%;
}

/* -------------- *
 * Experience
 * -------------- */
.exp-timeline {
  list-style: none;
  position: relative;
  margin-top: 50px;
}

/* Line */
.exp-timeline:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  width: 4px;
  background: #e0e0e0;
  left: 23%;
  margin-left: -6px;
}

/* Heading */
.exp-timeline > li > .exp-heading {
  position: relative;
  background: #869198;
  padding: 11px 15px;
  color: #fff;
  margin: 0 0 45px 0;
  line-height: 1.4;
  font-size: 17px;
}

/* Date */
.exp-timeline > li .exp-date {
  display: block;
  width: 28%;
  padding-right: 100px;
  position: absolute;
}

/* Date */
.exp-timeline > li .exp-date span {
  display: block;
  text-align: right;
  font-size: 16px;
  color: black;
}

/* Icon */
.exp-timeline > li .exp-icon {
  width: 40px;
  height: 26px;
  position: absolute;
  color: #fff;
  background: #666;
  text-align: center;
  left: 23%;
  margin: 7px 0 0 -24px;
  background-color: #869198;
}

/* Icon Top */
.exp-timeline > li .exp-icon:before {
  bottom: 100%;
  border-bottom: 10px solid #869198;
}

/* Icon Bot */
.exp-timeline > li .exp-icon:after {
  top: 100%;
  border-top: 10px solid #869198;
}

/* Icon Top & Bot */
.exp-timeline > li .exp-icon:before,
.exp-timeline > li .exp-icon:after {
  content: "";
  position: absolute;
  width: 0;
  left: 0;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
}

/* Card */
.exp-timeline > li .exp-card {
  margin: 0 0 15px 28%;
  padding: 20px 30px;
  background: #fff;
  position: relative;
}

/* Card Title */
.exp-timeline > li .exp-card h4 {
  margin: 0;
  font-size: 17px;
}

/* Card Desc */
.exp-timeline > li .exp-card p {
  font-size: 14px;
  margin-top: 10px;
  margin-bottom: 0;
}

/* Card Img */
.exp-timeline > li .exp-card img {
  max-height: 300px;
  width: auto;
}

/* Card Arrow */
.exp-timeline > li .exp-card:after {
  right: 100%;
  border: solid transparent;
  content: "";
  height: 0;
  width: 0;
  position: absolute;
  border-right-color: #fff;
  border-width: 10px;
  top: 10px;
}

@media (max-width: 767px) {
  .exp-timeline:before {
    display: none;
  }
  .exp-timeline > li .exp-date {
    width: 100%;
    position: relative;
    padding: 0 0 20px 0;
  }
  .exp-timeline > li .exp-date span {
    text-align: left;
  }
  .exp-timeline > li .exp-card {
    margin: 0 0 30px 0;
    padding: 1.3em;
  }
  .exp-timeline > li .exp-card:after {
    right: auto;
    left: 20px;
    border-right-color: transparent;
    border-bottom-color: #869198;
    top: -20px;
  }
  .exp-timeline > li .exp-icon {
    display: none;
  }
}

/* -------------- *
 * Projects
 * -------------- */
 .project {
  margin-bottom: 50px;
}

 .proj-img img {
  height: 300px;
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  border: 2px solid black;
}

.proj-title {
  font-size: 22px;
  font-weight: 500;
  color: #37c;
  margin-bottom: 10px;
  padding-top: 20px;
}

.proj-desc {
  font-size: 15px;
  font-weight: 500;
  color: green;
  margin-bottom: 10px;
}

.popup-video {
  position: fixed;
  top:0;
  left:0;
  z-index: 100;
  background: rgba(0,0,0,.8);
  height: 100%;
  width: 100%;
  display: none;
}

.popup-video iframe {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 750px;
  height: 422px;
  border-radius: 5px;
  border: 3px solid #fff;
}

.popup-video span {
  position: absolute;
  top: 30px;
  right: 20px;
  font-size: 50px;
  color: #fff;
  font-weight: bolder;
  z-index: 100;
  cursor: pointer;
}

@media (max-width: 768px) {
  .popup-video iframe {
    width: 95%;
  }
}

/* -------------- *
 * Resume
 * -------------- */
.resume {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* -------------- *
 * Footer
 * -------------- */
footer {
  background-color: #131313;
  color: #ffffff;
}

.foot {
  height: 5svh;
  display: flex;
}

footer h5 {
  margin-bottom: 0;
}

ul.banner-social-buttons li a {
  display: block;
  width: 50px;
  height: 50px;
  font-size: 24px;
  line-height: 50px;
  outline: 0;
  color: rgba(255, 255, 255, 0.8);
  background: #333;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

ul.banner-social-buttons li a:hover,
ul.banner-social-buttons li a:active {
  color: #fff;
  -webkit-box-shadow: 1px 1px 3px #333;
  -moz-box-shadow: 1px 1px 3px #333;
  box-shadow: 1px 1px 3px #333;
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  -o-transform: scale(1.1);
  transform: scale(1.1);
}
.list-inline > li {
  padding: 0px !important;
}

#linkedin:hover {
  background-color: #0077b5;
}
#github:hover {
  background-color: #4183c4;
}

